GNOME Bugzilla – Bug 687089
g_dbus_connection_export_menu_model(): fix a crash
Last modified: 2012-10-29 15:19:11 UTC
A few people have been noticing this...
Created attachment 227506 [details] [review] g_dbus_connection_export_menu_model(): fix a crash Add some extra protection when 'preparing' a group that doesn't yet contain any menus. This can happen if you subscribe to a group that doesn't yet exist. It was possible to crash any application using g_dbus_connection_export_menu_model() by requesting a non-existent subscription group over the bus. In practice this only happened in races -- where the proxy sees a group that exists and queries it, but by the time it does, it's already gone.
Review of attachment 227506 [details] [review]: Makes sense
Attachment 227506 [details] pushed as f20ae7f - g_dbus_connection_export_menu_model(): fix a crash